--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,16 @@
 {
+  "main": "dist/index.js",
   "dependencies": {
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "scripts": {
-    "start": "node server.js"
-  }  
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.13",
+    "typescript": "^5.0.4"
+  }
 }
