--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,10 +3,11 @@ FROM node:14-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install 
+RUN npm install
 
 COPY . .
+RUN npm run build
 
 EXPOSE 8080
 
-CMD [ "node", "server.js" ]
+CMD [ "node", "dist/server.js" ]
