--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "tsc && node dist/server.js",
     "test": "npx jest"
   },
   "devDependencies": {
